--- a/products/sss-pendant-silver.html
+++ b/products/sss-pendant-silver.html
@@ -3,15 +3,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SSS pendant — silver · EDELHART</title>
+  <title>SSS pendant · EDELHART</title>
   <meta name="description" content="SSS pendant in sterling silver — signature design with clean lines. Everyday elegance." />
   <link rel="icon" type="image/png" href="../img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css" />
+  <script>
+    // Ensures correct base when hosted on GitHub Pages or any subfolder
+    (function() {
+      try { window.__BASE_URL_OVERRIDE = new URL('../', location.href).href; } catch {}
+    })();
+  </script>
 </head>
-<body>
+<body data-product-slug="sss-silver">
 <header id="site-header">
   <div class="wrap nav">
     <a href="../index.html#home" class="brand" aria-label="EDELHART Home">
@@ -42,7 +48,7 @@
         <span class="sep">·</span>
         <a href="../index.html#contact">Contact</a>
         <span class="sep">·</span>
-        <a href="../index.html#about">About</a>
+        <a href../index.html#about">About</a>
       </div>
 
       <div class="nav-utilities" aria-label="Cart and currency">
@@ -54,116 +60,68 @@
           <option value="USD">USD</option>
           <option value="EUR">EUR</option>
         </select>
+      </div>
     </nav>
   </div>
 </header>
 
-<main class="product-page" aria-label="Product page">
+<main class="product-page" aria-label="Product page" data-product-slug="sss-silver">
   <div class="wrap">
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <a href="../index.html#collections">Collections</a>
       <a href="../collections/sss.html">SSS</a>
-      <span aria-current="page">SSS pendant — silver</span>
+      <span aria-current="page">SSS pendant</span>
     </nav>
 
     <a class="page-back" href="../index.html#products" aria-label="Back to catalog">Back to catalog</a>
 
     <div class="product">
-      <!-- LEFT: Gallery -->
       <div>
-        <div class="product-gallery" data-images="../img/products/sss-silver/sss-silver-1.jpeg,../img/products/sss-silver/sss-silver-2.jpeg,../img/products/sss-silver/sss-silver-3.jpeg,../img/products/sss-silver/sss-silver-4.jpeg,../img/products/sss-silver/sss-silver-5.jpeg,../img/products/sss-silver/sss-silver-6.jpeg,../img/products/sss-silver/sss-silver-7.jpeg,../img/products/sss-silver/sss-silver-8.jpeg,../img/products/sss-silver/sss-silver-9.jpeg,../img/products/sss-silver/sss-silver-10.jpeg,../img/products/sss-silver/sss-silver-11.jpeg">
+        <div class="product-gallery" data-images="">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
           <div class="thumbs"></div>
         </div>
-        <!-- Thumbnail strip below gallery -->
         <div class="thumb-strip">
           <div class="thumb-row"></div>
         </div>
       </div>
 
-      <!-- RIGHT: Checkout -->
       <aside class="checkout">
-        <div class="title">SSS pendant — silver</div>
-        <div class="price">$125</div>
+        <div class="title">SSS pendant</div>
+        <div class="price" data-price-vnd="0">Price on request</div>
 
         <form data-product="SSS pendant">
-          <div>
-            <label for="metal">Metal</label>
-            <select id="metal" name="metal">
-              <option>E-Silver</option>
-              <option>14K Gold</option>
-              <option>Black Rhodium</option>
-            </select>
-          </div>
-
-          <div>
-            <label for="stone">Stone</label>
-            <select id="stone" name="stone">
-              <option>OG (original design)</option>
-              <option>Diamond</option>
-              <option>Other gemstone</option>
-            </select>
-          </div>
-
-          <div>
-            <label for="qty">Quantity</label>
-            <select id="qty" name="qty">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-            </select>
-          </div>
-
+          <!-- Dynamic available design UI will be injected by app.js -->
           <div class="actions">
             <button type="button" class="btn add-to-cart">Add to cart</button>
-            <a href="https://wa.me/84944445084?text=Hello%20EDELHART%2C%20I%27m%20interested%20in%20the%20SSS%20pendant%20%E2%80%94%20silver."
-               class="btn primary" target="_blank" rel="noopener noreferrer" aria-label="Order via WhatsApp" title="Order via WhatsApp">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M12 2a10 10 0 00-8 16.1L3 22l3.9-1A10 10 0 1012 2zm5.2 14.2c-.2.6-1.2 1.1-1.7 1.1-.5 0-1 .2-3.3-1.1-2.8-1.6-4.5-4.6-4.6-4.8-.2-.3-1.1-1.5-1.1-2.8 0-1.2.6-1.8.9-2 .3-.2.8-.3 1-.3h.7c.2 0 .5 0 .7.6.3.7 1 2.4 1 2.5s.1.4 0 .6c-.1.2-.2.3-.4.5-.2.2-.4.5-.6.6-.2.2-.4.4-.2.7.2.3.9 1.5 2.1 2.4 1.5 1.1 2.7 1.5 3.1 1.7.3.1.6.1.8 0 .2-.1 1.3-.6 1.5-.8.2-.1.4-.2.7-.1.2.1 1.1.5 1.3.6.2.1.3.1.4.2.1 0 .1.6-.1 1.1z"/>
-              </svg>
+            <a href="https://wa.me/84944445084" class="btn primary" target="_blank" rel="noopener noreferrer" aria-label="Order via WhatsApp" title="Order via WhatsApp">
               WhatsApp
             </a>
             <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram" title="Copy order details for Instagram">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6-1a1 1 0 100 2 1 1 0 000-2zm-6 3a3 3 0 110 6 3 3 0 010-6z"/>
-              </svg>
-              Copy cart & Inquire on Instagram
+              Copy cart &amp; Inquire on Instagram
             </button>
             <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook" title="Copy order details for Facebook">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M22 12a10 10 0 10-11.6 9.9v-7h-2.3V12h2.3V9.7c0-2.3 1.4-3.6 3.5-3.6 1 0 2 .2 2 .2v2.2H15c-1.1 0-1.5.7-1.5 1.4V12h2.6l-.4 2.9h-2.2v7A10 10 0 0022 12z"/>
-              </svg>
-              Copy cart & Inquire on Facebook
+              Copy cart &amp; Inquire on Facebook
             </button>
             <a href="https://maps.google.com/?q=483/11+Le+Van+Sy+Street,+Ward+Nhieu+Loc,+Ho+Chi+Minh+City,+Vietnam"
                class="btn outline" target="_blank" rel="noopener noreferrer" aria-label="Find us on Google Maps" title="Find us on Google Maps">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M12 2a7 7 0 00-7 7c0 5.2 7 13 7 13s7-7.8 7-13a7 7 0 00-7-7zm0 9.5a2.5 2.5 0 110-5 2.5 2.5 0 010 5z"/>
-              </svg>
               Location
             </a>
           </div>
-        </form>
 
-        <p class="meta">Should you desire a rendition of this design in alternative materials or hues, or seek a bespoke creation tailored exclusively for you, crafted with the finest metals and adorned with exquisite stones, please contact us directly.</p>
+          <p class="meta">Bespoke and alternate materials are available; the design UI above is populated automatically.</p>
+        </form>
       </aside>
     </div>
 
-    <!-- CRITICAL: Wrapper prevents overlap -->
     <div class="product-page-content">
-      <!-- Product Description -->
       <div class="product-description">
         <h3>About This Piece</h3>
-        <p>
-          The SSS pendant embodies our signature aesthetic — refined minimalism with a statement edge.
-          Crafted in sterling silver — signature design with clean lines. Everyday elegance.
-          Each pendant is hand-finished to ensure exceptional quality and lasting beauty.
-        </p>
+        <p>Details load dynamically from product data.</p>
       </div>
 
-      <!-- Catalogue -->
       <section aria-label="Catalogue">
         <div class="section-head">
           <h2>Catalogue</h2>
@@ -203,23 +161,18 @@
         </div>
       </section>
 
-      <!-- You may also like -->
       <section aria-label="You may also like">
         <div class="section-head">
           <h2>You may also like</h2>
           <p>Pair it with complementary pieces.</p>
         </div>
         <div class="related-strip" id="dynamic-related">
-          <div class="related-track" data-auto="true">
-            <!-- Dynamically populated by JS -->
-          </div>
+          <div class="related-track" data-auto="true"></div>
           <div class="swipe-indicator" aria-hidden="true"><div class="thumb"></div></div>
         </div>
       </section>
     </div>
   </div>
-
-  <!-- Lightbox root injected by JS when opened -->
 </main>
 
 <footer>
@@ -229,7 +182,6 @@
   </div>
 </footer>
 
-<!-- Cart drawer -->
 <div class="cart-drawer" aria-hidden="true">
   <div class="cart-overlay"></div>
   <aside class="cart-panel" role="dialog" aria-modal="true" aria-label="Cart">
@@ -244,21 +196,21 @@
     <footer class="cart-footer">
       <div class="cart-summary">
         <span>Total</span>
-        <span class="cart-total">$0</span>
+        <span class="cart-total" data-price-vnd="0">Price on request</span>
       </div>
       <a class="btn primary cart-checkout" href="https://wa.me/84944445084" target="_blank" rel="noopener">
         Send order via WhatsApp
       </a>
-      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy cart & Inquire on Instagram</button>
-      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy cart & Inquire on Facebook</button>
+      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy cart &amp; Inquire on Instagram</button>
+      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy cart &amp; Inquire on Facebook</button>
     </footer>
   </aside>
 </div>
 
-<!-- Back to top -->
 <button id="back-to-top" aria-label="Back to top">↑</button>
 
 <script src="../js/products-data.js" defer></script>
+<script src="../js/currency-manager.js" defer></script>
 <script src="../js/app.js" defer></script>
 </body>
 </html>
