--- a/products/earring-shell.html
+++ b/products/earring-shell.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>EE female earring — black rhodium · EDELHART</title>
-  <meta name="description" content="EE female earring — black rhodium — bold dark finish. Signature design for everyday elegance." />
+  <title>The Soul Thief pendant · EDELHART</title>
+  <meta name="description" content="The Soul Thief pendant — playful and interlocking design." />
   <link rel="icon" type="image/png" href="../img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,19 +59,19 @@
   </div>
 </header>
 
-<main class="product-page" aria-label="Product page" data-product-slug="ee-female-earring-br">
+<main class="product-page" aria-label="Product page" data-product-slug="earring-shell">
   <div class="wrap">
     <nav class="breadcrumbs" aria-label="Breadcrumb">
       <a href="../index.html#collections">Collections</a>
-      <a href="../collections/ECHO.html">ECHO</a>
-      <span aria-current="page">EE female earring — black rhodium</span>
+      <a href="../collections/sss.html">SSS</a>
+      <span aria-current="page">The Soul Thief pendant</span>
     </nav>
 
     <a class="page-back" href="../index.html#products" aria-label="Back to catalog">Back to catalog</a>
 
     <div class="product">
       <div>
-        <div class="product-gallery" data-images="../img/products/EE-female-earring-br/EE-female-earring-br-1.jpeg,../img/products/EE-female-earring-br/EE-female-earring-br-2.jpeg">
+        <div class="product-gallery" data-images="">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
@@ -83,76 +83,31 @@
       </div>
 
       <aside class="checkout">
-        <div class="title">EE female earring — black rhodium</div>
-        <div class="price" data-price-vnd="10000">₫10,000</div>
+        <div class="title">Loading...</div>
+        <div class="price" data-price-vnd="0">Price on request</div>
 
-        <form data-product="EE female earring — black rhodium">
-          <div>
-            <label for="metal">Metal</label>
-            <select id="metal" name="metal">
-              <option>Black Rhodium</option>
-              <option>E-Silver</option>
-              <option>14K Gold</option>
-            </select>
-          </div>
-
-          <div>
-            <label for="stone">Stone</label>
-            <select id="stone" name="stone">
-              <option>OG (original design)</option>
-              <option>Diamond</option>
-              <option>Other gemstone</option>
-            </select>
-          </div>
-
-          <div>
-            <label for="qty">Quantity</label>
-            <select id="qty" name="qty">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-            </select>
-          </div>
-
+        <form data-product="">
           <div class="actions">
             <button type="button" class="btn add-to-cart">Add to cart</button>
-            <a href="https://wa.me/84944445084?text=Hello%20EDELHART%2C%20I%27m%20interested%20in%20the%20EE%20female%20earring%20%E2%80%94%20black%20rhodium."
-               class="btn primary" target="_blank" rel="noopener noreferrer" aria-label="Order via WhatsApp" title="Order via WhatsApp">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M12 2a10 10 0 00-8 16.1L3 22l3.9-1A10 10 0 1012 2zm5.2 14.2c-.2.6-1.2 1.1-1.7 1.1-.5 0-1 .2-3.3-1.1-2.8-1.6-4.5-4.6-4.6-4.8-.2-.3-1.1-1.5-1.1-2.8 0-1.2.6-1.8.9-2 .3-.2.8-.3 1-.3h.7c.2 0 .5 0 .7.6.3.7 1 2.4 1 2.5s.1.4 0 .6c-.1.2-.2.3-.4.5-.2.2-.4.5-.6.6-.2.2-.4.4-.2.7.2.3.9 1.5 2.1 2.4 1.5 1.1 2.7 1.5 3.1 1.7.3.1.6.1.8 0 .2-.1 1.3-.6 1.5-.8.2-.1.4-.2.7-.1.2.1 1.1.5 1.3.6.2.1.3.1.4.2.1 0 .1.6-.1 1.1z"/>
-              </svg>
+            <a href="https://wa.me/84944445084" class="btn primary" target="_blank" rel="noopener" aria-label="Order via WhatsApp">
               WhatsApp
             </a>
-            <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram" title="Copy order details for Instagram">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6-1a1 1 0 100 2 1 1 0 000-2zm-6 3a3 3 0 110 6 3 3 0 010-6z"/>
-              </svg>
+            <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram">
               Copy cart & Inquire on Instagram
             </button>
-            <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook" title="Copy order details for Facebook">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M22 12a10 10 0 10-11.6 9.9v-7h-2.3V12h2.3V9.7c0-2.3 1.4-3.6 3.5-3.6 1 0 2 .2 2 .2v2.2H15c-1.1 0-1.5.7-1.5 1.4V12h2.6l-.4 2.9h-2.2v7A10 10 0 0022 12z"/>
-              </svg>
+            <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook">
               Copy cart & Inquire on Facebook
             </button>
-            <a href="https://maps.google.com/?q=483/11+Le+Van+Sy+Street,+Ward+Nhieu+Loc,+Ho+Chi+Minh+City,+Vietnam"
-               class="btn outline" target="_blank" rel="noopener noreferrer" aria-label="Find us on Google Maps" title="Find us on Google Maps">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M12 2a7 7 0 00-7 7c0 5.2 7 13 7 13s7-7.8 7-13a7 7 0 00-7-7zm0 9.5a2.5 2.5 0 110-5 2.5 2.5 0 010 5z"/>
-              </svg>
-              Location
-            </a>
           </div>
+          <p class="meta">Bespoke and alternate materials are available; the design UI above is populated automatically.</p>
         </form>
-
-        <p class="meta">Should you desire a rendition of this design in alternative materials or hues—or a bespoke creation tailored exclusively for you—please contact us directly.</p>
       </aside>
     </div>
 
     <div class="product-page-content">
       <div class="product-description">
         <h3>About This Piece</h3>
-        <p>The EE female earring embodies our signature aesthetic — refined minimalism with a statement edge. Crafted in black rhodium with bold dark finish, this piece features signature design for everyday elegance. Each earring is hand-finished to ensure exceptional quality and lasting beauty.</p>
+        <p>Details load dynamically from product data.</p>
       </div>
 
       <section aria-label="Catalogue">
@@ -229,7 +184,7 @@
     <footer class="cart-footer">
       <div class="cart-summary">
         <span>Total</span>
-        <span class="cart-total" data-price-vnd="10000">₫10,000</span>
+        <span class="cart-total" data-price-vnd="0">Price on request</span>
       </div>
       <a class="btn primary cart-checkout" href="https://wa.me/84944445084" target="_blank" rel="noopener">
         Send order via WhatsApp
