--- a/products/necklace-ants.html
+++ b/products/necklace-ants.html
@@ -71,7 +71,7 @@
 
     <div class="product">
       <div>
-        <div class="product-gallery" data-images="../img/products/necklace-ants/necklace-ants-1.jpeg,../img/products/necklace-ants/necklace-ants-2.jpeg,../img/products/necklace-ants/necklace-ants-3.jpeg,../img/products/necklace-ants/necklace-ants-4.jpeg,../img/products/necklace-ants/necklace-ants-5.jpeg,../img/products/necklace-ants/necklace-ants-6.jpeg">
+        <div class="product-gallery" data-images="">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
@@ -83,76 +83,31 @@
       </div>
 
       <aside class="checkout">
-        <div class="title">Ants necklace</div>
+        <div class="title">Loading...</div>
         <div class="price" data-price-vnd="0">Price on request</div>
 
-        <form data-product="Ants necklace">
-          <div>
-            <label for="metal">Metal</label>
-            <select id="metal" name="metal">
-              <option>E-Silver</option>
-              <option>14K Gold</option>
-              <option>Black Rhodium</option>
-            </select>
-          </div>
-
-          <div>
-            <label for="stone">Stone</label>
-            <select id="stone" name="stone">
-              <option>OG (original design)</option>
-              <option>Diamond</option>
-              <option>Other gemstone</option>
-            </select>
-          </div>
-
-          <div>
-            <label for="qty">Quantity</label>
-            <select id="qty" name="qty">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-            </select>
-          </div>
-
+        <form data-product="">
           <div class="actions">
             <button type="button" class="btn add-to-cart">Add to cart</button>
-            <a href="https://wa.me/84944445084?text=Hello%20EDELHART%2C%20I%27m%20interested%20in%20the%20Ants%20necklace."
-               class="btn primary" target="_blank" rel="noopener noreferrer" aria-label="Order via WhatsApp" title="Order via WhatsApp">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M12 2a10 10 0 00-8 16.1L3 22l3.9-1A10 10 0 1012 2zm5.2 14.2c-.2.6-1.2 1.1-1.7 1.1-.5 0-1 .2-3.3-1.1-2.8-1.6-4.5-4.6-4.6-4.8-.2-.3-1.1-1.5-1.1-2.8 0-1.2.6-1.8.9-2 .3-.2.8-.3 1-.3h.7c.2 0 .5 0 .7.6.3.7 1 2.4 1 2.5s.1.4 0 .6c-.1.2-.2.3-.4.5-.2.2-.4.5-.6.6-.2.2-.4.4-.2.7.2.3.9 1.5 2.1 2.4 1.5 1.1 2.7 1.5 3.1 1.7.3.1.6.1.8 0 .2-.1 1.3-.6 1.5-.8.2-.1.4-.2.7-.1.2.1 1.1.5 1.3.6.2.1.3.1.4.2.1 0 .1.6-.1 1.1z"/>
-              </svg>
+            <a href="https://wa.me/84944445084" class="btn primary" target="_blank" rel="noopener" aria-label="Order via WhatsApp">
               WhatsApp
             </a>
-            <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram" title="Copy order details for Instagram">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6-1a1 1 0 100 2 1 1 0 000-2zm-6 3a3 3 0 110 6 3 3 0 010-6z"/>
-              </svg>
+            <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram">
               Copy cart & Inquire on Instagram
             </button>
-            <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook" title="Copy order details for Facebook">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M22 12a10 10 0 10-11.6 9.9v-7h-2.3V12h2.3V9.7c0-2.3 1.4-3.6 3.5-3.6 1 0 2 .2 2 .2v2.2H15c-1.1 0-1.5.7-1.5 1.4V12h2.6l-.4 2.9h-2.2v7A10 10 0 0022 12z"/>
-              </svg>
+            <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook">
               Copy cart & Inquire on Facebook
             </button>
-            <a href="https://maps.google.com/?q=483/11+Le+Van+Sy+Street,+Ward+Nhieu+Loc,+Ho+Chi+Minh+City,+Vietnam"
-               class="btn outline" target="_blank" rel="noopener noreferrer" aria-label="Find us on Google Maps" title="Find us on Google Maps">
-              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
-                <path d="M12 2a7 7 0 00-7 7c0 5.2 7 13 7 13s7-7.8 7-13a7 7 0 00-7-7zm0 9.5a2.5 2.5 0 110-5 2.5 2.5 0 010 5z"/>
-              </svg>
-              Location
-            </a>
           </div>
+          <p class="meta">Bespoke and alternate materials are available; the design UI above is populated automatically.</p>
         </form>
-
-        <p class="meta">Should you desire a rendition of this design in alternative materials or hues—or a bespoke creation tailored exclusively for you—please contact us directly.</p>
       </aside>
     </div>
 
     <div class="product-page-content">
       <div class="product-description">
         <h3>About This Piece</h3>
-        <p>The Ants necklace embodies our signature aesthetic — refined minimalism with a statement edge. Crafted as a rhythmic chain of tiny forms, this piece is unique for statement wear. Each necklace is hand-finished to ensure exceptional quality and lasting beauty.</p>
+        <p>Details load dynamically from product data.</p>
       </div>
 
       <section aria-label="Catalogue">
