--- a/products/sss-pendant-gold.html
+++ b/products/sss-pendant-gold.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css" />
   <script>
-    // Ensures correct base when hosted on GitHub Pages or any subfolder
     (function() {
       try { window.__BASE_URL_OVERRIDE = new URL('../', location.href).href; } catch {}
     })();
@@ -89,24 +88,22 @@
       </div>
 
       <aside class="checkout">
-        <div class="title">SSS pendant — gold</div>
+        <div class="title">Loading...</div>
         <div class="price" data-price-vnd="0">Price on request</div>
 
-        <form data-product="SSS pendant — gold">
-          <!-- Dynamic available design UI will be injected by app.js -->
+        <form data-product="">
           <div class="actions">
             <button type="button" class="btn add-to-cart">Add to cart</button>
             <a class="btn primary" href="https://wa.me/84944445084" target="_blank" rel="noopener" aria-label="Order via WhatsApp">
               WhatsApp
             </a>
             <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram">
-              Copy cart &amp; Inquire on Instagram
+              Copy cart & Inquire on Instagram
             </button>
             <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook">
-              Copy cart &amp; Inquire on Facebook
+              Copy cart & Inquire on Facebook
             </button>
           </div>
-
           <p class="meta">Bespoke and alternate materials are available; the design UI above is populated automatically.</p>
         </form>
       </aside>
@@ -197,8 +194,8 @@
       <a class="btn primary cart-checkout" href="https://wa.me/84944445084" target="_blank" rel="noopener">
         Send order via WhatsApp
       </a>
-      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy cart &amp; Inquire on Instagram</button>
-      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy cart &amp; Inquire on Facebook</button>
+      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy cart & Inquire on Instagram</button>
+      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy cart & Inquire on Facebook</button>
     </footer>
   </aside>
 </div>
