--- a/products/sss-pendant-silver.html
+++ b/products/sss-pendant-silver.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css" />
   <script>
-    // Ensures correct base when hosted on GitHub Pages or any subfolder
     (function() {
       try { window.__BASE_URL_OVERRIDE = new URL('../', location.href).href; } catch {}
     })();
@@ -48,7 +47,7 @@
         <span class="sep">·</span>
         <a href="../index.html#contact">Contact</a>
         <span class="sep">·</span>
-        <a href../index.html#about">About</a>
+        <a href="../index.html#about">About</a>
       </div>
 
       <div class="nav-utilities" aria-label="Cart and currency">
@@ -89,28 +88,22 @@
       </div>
 
       <aside class="checkout">
-        <div class="title">SSS pendant</div>
+        <div class="title">Loading...</div>
         <div class="price" data-price-vnd="0">Price on request</div>
 
-        <form data-product="SSS pendant">
-          <!-- Dynamic available design UI will be injected by app.js -->
+        <form data-product="">
           <div class="actions">
             <button type="button" class="btn add-to-cart">Add to cart</button>
-            <a href="https://wa.me/84944445084" class="btn primary" target="_blank" rel="noopener noreferrer" aria-label="Order via WhatsApp" title="Order via WhatsApp">
+            <a href="https://wa.me/84944445084" class="btn primary" target="_blank" rel="noopener" aria-label="Order via WhatsApp">
               WhatsApp
             </a>
-            <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram" title="Copy order details for Instagram">
-              Copy cart &amp; Inquire on Instagram
+            <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram">
+              Copy cart & Inquire on Instagram
             </button>
-            <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook" title="Copy order details for Facebook">
-              Copy cart &amp; Inquire on Facebook
+            <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook">
+              Copy cart & Inquire on Facebook
             </button>
-            <a href="https://maps.google.com/?q=483/11+Le+Van+Sy+Street,+Ward+Nhieu+Loc,+Ho+Chi+Minh+City,+Vietnam"
-               class="btn outline" target="_blank" rel="noopener noreferrer" aria-label="Find us on Google Maps" title="Find us on Google Maps">
-              Location
-            </a>
           </div>
-
           <p class="meta">Bespoke and alternate materials are available; the design UI above is populated automatically.</p>
         </form>
       </aside>
@@ -201,8 +194,8 @@
       <a class="btn primary cart-checkout" href="https://wa.me/84944445084" target="_blank" rel="noopener">
         Send order via WhatsApp
       </a>
-      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy cart &amp; Inquire on Instagram</button>
-      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy cart &amp; Inquire on Facebook</button>
+      <button class="btn outline cart-copy" data-platform="Instagram" type="button">Copy cart & Inquire on Instagram</button>
+      <button class="btn outline cart-copy" data-platform="Facebook" type="button">Copy cart & Inquire on Facebook</button>
     </footer>
   </aside>
 </div>
