Describe what you changed

--- a/products/legs-pendant.html
+++ b/products/legs-pendant.html
@@ -99,7 +99,7 @@
                             Copy cart & Inquire on Facebook
                         </button>
                     </div>
-                    <p class="meta">Bespoke and alternate materials are available; the design UI above is populated automatically.</p>
+                    <p class="meta">Bespoke and alternate materials are available; </p>
                 </form>
             </aside>
         </div>
