Describe what you changed

--- a/products/11.html
+++ b/products/11.html
@@ -5,17 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Coming soon · EDELHART</title>
   <meta name="description" content="Coming soon — new piece under development. Stay tuned for updates." />
-  <link rel="icon" type="image/png" href="../img/favicon.png" />
+  <link rel="icon" type="image/png" href="./img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
 <header id="site-header">
   <div class="wrap nav">
-    <a href="../index.html#home" class="brand" aria-label="EDELHART Home">
-      <img src="../img/logo.png" alt="EDELHART Logo" class="navbar-logo">
+    <a href="./index.html#home" class="brand" aria-label="EDELHART Home">
+      <img src="./img/logo.png" alt="EDELHART Logo" class="navbar-logo">
       <span class="brand-word">EDELHART</span>
     </a>
     <nav class="menu" aria-label="Main">
@@ -32,17 +32,17 @@
             </svg>
           </button>
           <div class="drop-menu" role="menu">
-            <a href="../collections/sss.html" role="menuitem">SSS</a>
-            <a href="../collections/whispering-a.html" role="menuitem">Whispering A</a>
-            <a href="../collections/ECHO.html" role="menuitem">ECHO</a>
+            <a href="./collections/sss.html" role="menuitem">SSS</a>
+            <a href="./collections/whispering-a.html" role="menuitem">Whispering A</a>
+            <a href="./collections/ECHO.html" role="menuitem">ECHO</a>
           </div>
         </div>
         <span class="sep">·</span>
-        <a href="../index.html#products">All Products</a>
+        <a href="./index.html#products">All Products</a>
         <span class="sep">·</span>
-        <a href="../index.html#contact">Contact</a>
+        <a href="./index.html#contact">Contact</a>
         <span class="sep">·</span>
-        <a href="../index.html#about">About</a>
+        <a href="./index.html#about">About</a>
       </div>
 
       <div class="nav-utilities" aria-label="Cart and currency">
@@ -62,11 +62,11 @@
 <main class="product-page" aria-label="Product page" data-product-slug="11">
   <div class="wrap">
     <nav class="breadcrumbs" aria-label="Breadcrumb">
-      <a href="../index.html#products">All Products</a>
+      <a href="./index.html#products">All Products</a>
       <span aria-current="page">Coming soon</span>
     </nav>
 
-    <a class="page-back" href="../index.html#products" aria-label="Back to catalog">Back to catalog</a>
+    <a class="page-back" href="./index.html#products" aria-label="Back to catalog">Back to catalog</a>
 
     <div class="product">
       <div>
@@ -103,20 +103,20 @@
 
         <div class="collage-wrapper">
           <div class="collage-surround">
-            <img src="../img/models/5.jpeg" alt="Model portrait with ring" loading="lazy" decoding="async" class="collage-img">
-            <img src="../img/models/6.jpeg" alt="Hands with multiple rings" loading="lazy" decoding="async" class="collage-img">
-            <img src="../img/models/7.jpeg" alt="Pendant layered styling" loading="lazy" decoding="async" class="collage-img">
-            <img src="../img/models/8.jpeg" alt="Necklace in motion" loading="lazy" decoding="async" class="collage-img">
-            <img src="../img/models/9.jpeg" alt="Earring editorial" loading="lazy" decoding="async" class="collage-img">
-            <img src="../img/models/10.jpeg" alt="Bracelet detail" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/5.jpeg" alt="Model portrait with ring" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/6.jpeg" alt="Hands with multiple rings" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/7.jpeg" alt="Pendant layered styling" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/8.jpeg" alt="Necklace in motion" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/9.jpeg" alt="Earring editorial" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/10.jpeg" alt="Bracelet detail" loading="lazy" decoding="async" class="collage-img">
           </div>
 
           <div class="featured-strip collage-main">
             <div class="featured-track">
-              <div class="feat-slide"><img src="../img/models/model-ring-sss.jpeg" alt="Model wearing ring, close-up" decoding="async"></div>
-              <div class="feat-slide"><img src="../img/models/2.jpeg" alt="Model with ring detail, side light" decoding="async"></div>
-              <div class="feat-slide"><img src="../img/models/3.jpeg" alt="Necklace on model, collarbone" decoding="async"></div>
-              <div class="feat-slide"><img src="../img/models/4.jpeg" alt="Earring on model, profile" decoding="async"></div>
+              <div class="feat-slide"><img src="./img/models/model-ring-sss.jpeg" alt="Model wearing ring, close-up" decoding="async"></div>
+              <div class="feat-slide"><img src="./img/models/2.jpeg" alt="Model with ring detail, side light" decoding="async"></div>
+              <div class="feat-slide"><img src="./img/models/3.jpeg" alt="Necklace on model, collarbone" decoding="async"></div>
+              <div class="feat-slide"><img src="./img/models/4.jpeg" alt="Earring on model, profile" decoding="async"></div>
             </div>
 
             <button class="slider-btn slider-prev" type="button" aria-label="Previous image">‹</button>
@@ -151,7 +151,7 @@
 <footer>
   <div class="wrap foot">
     <small>© <span id="year"></span> EDELHART.</small>
-    <small><a href="../index.html#home">Back to home ↑</a></small>
+    <small><a href="./index.html#home">Back to home ↑</a></small>
   </div>
 </footer>
 
@@ -182,8 +182,8 @@
 
 <button id="back-to-top" aria-label="Back to top">↑</button>
 
-<script src="../js/products-data.js" defer></script>
-<script src="../js/currency-manager.js" defer></script>
-<script src="../js/app.js" defer></script>
+<script src="./js/products-data.js" defer></script>
+<script src="./js/currency-manager.js" defer></script>
+<script src="./js/app.js" defer></script>
 </body>
 </html>
