--- a/products/earring-shell.html
+++ b/products/earring-shell.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Soul Thief pendant · EDELHART</title>
   <meta name="description" content="The Soul Thief pendant — playful and interlocking design." />
+  <script>window.__BASE_URL_OVERRIDE = new URL('../', location.href).href;</script>
   <link rel="icon" type="image/png" href="../img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
