--- a/products/earring-shell.html
+++ b/products/earring-shell.html
@@ -5,12 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Soul Thief pendant · EDELHART</title>
   <meta name="description" content="The Soul Thief pendant — playful and interlocking design." />
-  <script>window.__BASE_URL_OVERRIDE = new URL('../', location.href).href;</script>
   <link rel="icon" type="image/png" href="../img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/styles.css" />
+  <script>
+    (function() {
+      try { window.__BASE_URL_OVERRIDE = new URL('../', location.href).href; } catch {}
+    })();
+  </script>
 </head>
 <body>
 <header id="site-header">
