--- a/index.html
+++ b/index.html
@@ -187,13 +187,27 @@
     /* Logic for flipbook */
     (() => {
       const images = [
-        "img/products/sss-gold/sss-gold-1.jpeg",
-        "img/products/sss-silver/sss-silver-1.jpeg",
-        "img/products/LEGS-pendant/LEGS-pendant-1.jpeg",
-        "img/products/ee-female-ring-gold/ee-female-ring-gold-1.jpeg",
-        "img/products/ee-female-ring-silver/ee-female-ring-silver-1.jpeg",
-        "img/products/earring-blue-gem/earring-blue-gem-1.jpeg",
-        "img/products/ring-blue-gem/ring-blue-gem-1.jpeg"
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0001.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0002.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0003.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0004.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0005.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0006.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0007.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0008.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0009.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0010.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0011.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0012.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0013.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0014.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0015.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0016.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0017.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0018.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0019.jpg",
+        "img/flipbook/EDELHART Crafted Beginnings 1st_page-0020.jpg"
+
       ];
       if (images.length % 2 === 1) images.push(images[images.length - 1]);
 
